--- a/spotify_data_retrieve_test.ipynb
+++ b/spotify_data_retrieve_test.ipynb
@@ -5912,6 +5912,318 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>album</th>\n",
+       "      <th>track_number</th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>uri</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>popularity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Girl Code</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4Vw3GouohCgu8hgGYdl8m9</td>\n",
+       "      <td>Intro (#FREEJT)</td>\n",
+       "      <td>spotify:track:4Vw3GouohCgu8hgGYdl8m9</td>\n",
+       "      <td>0.12600</td>\n",
+       "      <td>0.664</td>\n",
+       "      <td>0.637</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.378</td>\n",
+       "      <td>-4.597</td>\n",
+       "      <td>0.4170</td>\n",
+       "      <td>98.892</td>\n",
+       "      <td>0.0393</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Girl Code</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0RRm4OS5ymfZryXBuj0G2m</td>\n",
+       "      <td>Twerk (feat. Cardi B)</td>\n",
+       "      <td>spotify:track:0RRm4OS5ymfZryXBuj0G2m</td>\n",
+       "      <td>0.12100</td>\n",
+       "      <td>0.788</td>\n",
+       "      <td>0.842</td>\n",
+       "      <td>0.001120</td>\n",
+       "      <td>0.166</td>\n",
+       "      <td>-4.006</td>\n",
+       "      <td>0.1420</td>\n",
+       "      <td>190.077</td>\n",
+       "      <td>0.4810</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Girl Code</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3A2yGHWIzmGEIolwonU69h</td>\n",
+       "      <td>Act Up</td>\n",
+       "      <td>spotify:track:3A2yGHWIzmGEIolwonU69h</td>\n",
+       "      <td>0.01670</td>\n",
+       "      <td>0.938</td>\n",
+       "      <td>0.638</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.111</td>\n",
+       "      <td>-4.713</td>\n",
+       "      <td>0.1890</td>\n",
+       "      <td>97.075</td>\n",
+       "      <td>0.3130</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Girl Code</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6gqvCJJY8Sh4opRxXVO7A7</td>\n",
+       "      <td>Season (feat. Lil Baby)</td>\n",
+       "      <td>spotify:track:6gqvCJJY8Sh4opRxXVO7A7</td>\n",
+       "      <td>0.00964</td>\n",
+       "      <td>0.594</td>\n",
+       "      <td>0.695</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.157</td>\n",
+       "      <td>-4.634</td>\n",
+       "      <td>0.3110</td>\n",
+       "      <td>138.833</td>\n",
+       "      <td>0.4080</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Girl Code</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3E7jehnxsH4xZAuxDQg4zC</td>\n",
+       "      <td>Broke Boy</td>\n",
+       "      <td>spotify:track:3E7jehnxsH4xZAuxDQg4zC</td>\n",
+       "      <td>0.00397</td>\n",
+       "      <td>0.782</td>\n",
+       "      <td>0.690</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>0.175</td>\n",
+       "      <td>-3.677</td>\n",
+       "      <td>0.0682</td>\n",
+       "      <td>102.997</td>\n",
+       "      <td>0.3170</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>American Teen</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4V3VshJLUTCIWa77YiAkvM</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>spotify:track:4V3VshJLUTCIWa77YiAkvM</td>\n",
+       "      <td>0.10100</td>\n",
+       "      <td>0.678</td>\n",
+       "      <td>0.575</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>0.116</td>\n",
+       "      <td>-7.086</td>\n",
+       "      <td>0.1230</td>\n",
+       "      <td>100.007</td>\n",
+       "      <td>0.3670</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>American Teen</td>\n",
+       "      <td>12</td>\n",
+       "      <td>25YvGDl2zSE0pH8jrMZ6aY</td>\n",
+       "      <td>Therapy</td>\n",
+       "      <td>spotify:track:25YvGDl2zSE0pH8jrMZ6aY</td>\n",
+       "      <td>0.89100</td>\n",
+       "      <td>0.707</td>\n",
+       "      <td>0.484</td>\n",
+       "      <td>0.003440</td>\n",
+       "      <td>0.256</td>\n",
+       "      <td>-6.579</td>\n",
+       "      <td>0.0481</td>\n",
+       "      <td>92.988</td>\n",
+       "      <td>0.4300</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>American Teen</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6SWHTMywuTXLFlMQ75cAuu</td>\n",
+       "      <td>Keep Me</td>\n",
+       "      <td>spotify:track:6SWHTMywuTXLFlMQ75cAuu</td>\n",
+       "      <td>0.36800</td>\n",
+       "      <td>0.778</td>\n",
+       "      <td>0.574</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.126</td>\n",
+       "      <td>-7.775</td>\n",
+       "      <td>0.0327</td>\n",
+       "      <td>112.048</td>\n",
+       "      <td>0.6630</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>American Teen</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1Ob94QesoxHSBrypyBbdfd</td>\n",
+       "      <td>Shot Down</td>\n",
+       "      <td>spotify:track:1Ob94QesoxHSBrypyBbdfd</td>\n",
+       "      <td>0.89300</td>\n",
+       "      <td>0.767</td>\n",
+       "      <td>0.512</td>\n",
+       "      <td>0.000223</td>\n",
+       "      <td>0.103</td>\n",
+       "      <td>-6.777</td>\n",
+       "      <td>0.0591</td>\n",
+       "      <td>123.921</td>\n",
+       "      <td>0.4890</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>American Teen</td>\n",
+       "      <td>15</td>\n",
+       "      <td>67kXYrMTQbS7MVbXyGyxHm</td>\n",
+       "      <td>Angels</td>\n",
+       "      <td>spotify:track:67kXYrMTQbS7MVbXyGyxHm</td>\n",
+       "      <td>0.95900</td>\n",
+       "      <td>0.472</td>\n",
+       "      <td>0.265</td>\n",
+       "      <td>0.000499</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>-10.059</td>\n",
+       "      <td>0.0356</td>\n",
+       "      <td>111.558</td>\n",
+       "      <td>0.2040</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1455 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            album  track_number                      id  \\\n",
+       "0       Girl Code             1  4Vw3GouohCgu8hgGYdl8m9   \n",
+       "1       Girl Code             2  0RRm4OS5ymfZryXBuj0G2m   \n",
+       "2       Girl Code             3  3A2yGHWIzmGEIolwonU69h   \n",
+       "3       Girl Code             4  6gqvCJJY8Sh4opRxXVO7A7   \n",
+       "4       Girl Code             5  3E7jehnxsH4xZAuxDQg4zC   \n",
+       "..            ...           ...                     ...   \n",
+       "57  American Teen            11  4V3VshJLUTCIWa77YiAkvM   \n",
+       "58  American Teen            12  25YvGDl2zSE0pH8jrMZ6aY   \n",
+       "59  American Teen            13  6SWHTMywuTXLFlMQ75cAuu   \n",
+       "60  American Teen            14  1Ob94QesoxHSBrypyBbdfd   \n",
+       "61  American Teen            15  67kXYrMTQbS7MVbXyGyxHm   \n",
+       "\n",
+       "                       name                                   uri  \\\n",
+       "0           Intro (#FREEJT)  spotify:track:4Vw3GouohCgu8hgGYdl8m9   \n",
+       "1     Twerk (feat. Cardi B)  spotify:track:0RRm4OS5ymfZryXBuj0G2m   \n",
+       "2                    Act Up  spotify:track:3A2yGHWIzmGEIolwonU69h   \n",
+       "3   Season (feat. Lil Baby)  spotify:track:6gqvCJJY8Sh4opRxXVO7A7   \n",
+       "4                 Broke Boy  spotify:track:3E7jehnxsH4xZAuxDQg4zC   \n",
+       "..                      ...                                   ...   \n",
+       "57                   Winter  spotify:track:4V3VshJLUTCIWa77YiAkvM   \n",
+       "58                  Therapy  spotify:track:25YvGDl2zSE0pH8jrMZ6aY   \n",
+       "59                  Keep Me  spotify:track:6SWHTMywuTXLFlMQ75cAuu   \n",
+       "60                Shot Down  spotify:track:1Ob94QesoxHSBrypyBbdfd   \n",
+       "61                   Angels  spotify:track:67kXYrMTQbS7MVbXyGyxHm   \n",
+       "\n",
+       "    acousticness  danceability  energy  instrumentalness  liveness  loudness  \\\n",
+       "0        0.12600         0.664   0.637          0.000000     0.378    -4.597   \n",
+       "1        0.12100         0.788   0.842          0.001120     0.166    -4.006   \n",
+       "2        0.01670         0.938   0.638          0.000000     0.111    -4.713   \n",
+       "3        0.00964         0.594   0.695          0.000000     0.157    -4.634   \n",
+       "4        0.00397         0.782   0.690          0.000003     0.175    -3.677   \n",
+       "..           ...           ...     ...               ...       ...       ...   \n",
+       "57       0.10100         0.678   0.575          0.000009     0.116    -7.086   \n",
+       "58       0.89100         0.707   0.484          0.003440     0.256    -6.579   \n",
+       "59       0.36800         0.778   0.574          0.000000     0.126    -7.775   \n",
+       "60       0.89300         0.767   0.512          0.000223     0.103    -6.777   \n",
+       "61       0.95900         0.472   0.265          0.000499     0.100   -10.059   \n",
+       "\n",
+       "    speechiness    tempo  valence  popularity  \n",
+       "0        0.4170   98.892   0.0393          34  \n",
+       "1        0.1420  190.077   0.4810          70  \n",
+       "2        0.1890   97.075   0.3130          75  \n",
+       "3        0.3110  138.833   0.4080          50  \n",
+       "4        0.0682  102.997   0.3170          41  \n",
+       "..          ...      ...      ...         ...  \n",
+       "57       0.1230  100.007   0.3670          63  \n",
+       "58       0.0481   92.988   0.4300          64  \n",
+       "59       0.0327  112.048   0.6630          62  \n",
+       "60       0.0591  123.921   0.4890          68  \n",
+       "61       0.0356  111.558   0.2040          65  \n",
+       "\n",
+       "[1455 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spotify_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
